--- a/index.html
+++ b/index.html
@@ -12,12 +12,54 @@
     />
     <link rel="stylesheet" href="./public/css/command.css" />
     <link rel="stylesheet" href="./public/css/home.css" />
+    
   </head>
   <body>
     <div class="navbar_frame">
     </div>
     <div class="home page">
      <div class="header_frame">
+      </div>
+      <div class="service_frame">
+        <div class="container">
+          <div class="service_box">
+            <img src="public/images/icons/track.svg" alt=""/>
+            <div class="service_content"></div>
+            <span>Free shipping</span>
+            <p>Free Shipping for others over $200</p>
+          </div>
+        </div><div class="service_box">
+          <img src="public/images/icons/track.svg" alt=""/>
+          <div class="service_content"></div>
+          <span>Free shipping</span>
+          <p>Free Shipping for others over $200</p>
+        </div>
+      </div>
+      <div class="service_box">
+        <img src="public/images/icons/garantue.svg" alt=""/>
+        <div class="service_content"></div>
+        <span>Money Guarantee</span>
+        <p>Within 30 days for an exchange</p>
+      </div>
+    </div>
+    <div class="service_box">
+      <img src="public/images/icons/headphones.svg" alt=""/>
+      <div class="service_content"></div>
+      <span>Online Support</span>
+      <p>24 hours a day, 7days a week</p>
+    </div>
+  </div>
+  <div class="service_box">
+    <img src="public/images/icons/credit-card.svg" alt=""/>
+    <div class="service_content"></div>
+    <span>Flexible Payment</span>
+    <p>Pay with multiple credit cards</p>
+  </div>
+</div>
+        <div class="service box"></div>
+        <div class="service box"></div>
+        <div class="service box"></div>
+      </div>
       <div class="container">
         <div class="header_left">
         <div class="header_right">
