feat: completed advirting veiw

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./public/css/command.css" />
-    <link rel="stylesheet" href="./public/css/home.css" />
+    <link rel="stylesheet" href="public/css/home (2).css" />
   </head>
   <body>
     <div class="navbar_frame">
@@ -220,7 +220,392 @@
           </div>
         </div>
       </div>
-    
+
+      <!-- <div class="selling_product_frame">
+        <div class="container">
+          <div class="category_top"></div>
+          <span>Top Selling Products</span>
+            <a href="#"> View All </a>
+          </div>
+          <div class="product_wrapper">
+            <div class="prev_next_box">
+              <img src="./public/images/icons/next.svg" alt="" />
+            </div>
+            <div class="product_boxes">
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url('public/images/products/watch.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to card</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_box_content">
+                  <span class="product_title">SAMSUNG</span>
+                  <a href="#">
+                    <p class="product_description">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$32</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url('public/images/products/ph');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to card</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_box_content">
+                  <span class="product_title">SONY</span>
+                  <a href="#">
+                    <p class="product_description">
+                      Apple iPhone 11 64GB Smartphone - Black.
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$32</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url('public/images/products/iRobot.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to card</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_box_content">
+                  <span class="product_title">SONY</span>
+                  <a href="#">
+                    <p class="product_description">
+                      iRobot Roomba i3+ EVO Wi-Fi Connected Self-Empty Robot.
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$399</strong>
+                    <span>$450</span>
+                  </div>
+                </div>
+              </div>
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url('public/images/products/dyson.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to card</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_box_content">
+                  <span class="product_title">Eastsport</span>
+                  <a href="#">
+                    <p class="product_description">
+                      Dyson V7 Complete Cordless Stick Vacuum - Iron/Blue
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <img src="./public/images/icons/review.svg" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$35</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <div class="prev_next_box" style="transform: scaleX(-1)">
+                <img src="./public/images/icons/next.svg" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="page_box">
+            <div class="page_main">
+              <img src="./public/images/icons/arrow-prev_next.svg" alt="" />
+              <div class="page_dot">
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot active">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+              </div>
+              <img
+                src="./public/images/icons/arrow-prev_next.svg"
+                alt=""
+                style="transform: scaleX(-1)"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="adv_frame">
+        Members get free shipping* with no order minimum!*Restrictions apply.Try
+        free 30-day trial
+      </div>
     </div>
   </body>
+</html> -->
+<div class="selling_product_frame">
+  <div class="container">
+    <div class="category_top">
+      <span>top selling product</span>
+      <a href="">View All </a>
+    </div>
+    <div class="product_wrapper">
+      <div class="next_prev_box">
+        <img src="public/images/Photos/icons/next.svg" alt="" />
+      </div>
+      <div class="product_boxes">
+        <div class="product_box">
+          <a href="">
+            <div
+              class="product_img_box"
+              style="
+                background: url(public/images/products/watch.png);
+                background-size: cover;
+              "
+            >
+              <div class="hover_box">
+                <button>Add To Cart</button>
+              </div>
+            </div>
+          </a>
+          <div class="product_content_box">
+            <span class="product_title">Samsung</span>
+            <a href="">
+              <p class="product_desc">
+                Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+              </p>
+            </a>
+            <div class="review_box">
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <span>3,014 reviews</span>
+            </div>
+            <div class="price_box">
+              <strong>$32</strong>
+              <span>$45</span>
+            </div>
+          </div>
+        </div>
+        <div class="product_box">
+          <a href="">
+            <div
+              class="product_img_box"
+              style="
+                background: url(public/images/products/phone.png);
+                background-size: cover;
+              "
+            >
+              <div class="hover_box">
+                <button>Add To Cart</button>
+              </div>
+            </div>
+          </a>
+          <div class="product_content_box">
+            <span class="product_title">Sony</span>
+            <a href="">
+              <p class="product_desc">
+                Apple iPhone 11 64GB Smartphone - Black.
+              </p>
+            </a>
+            <div class="review_box">
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <span>3,014 reviews</span>
+            </div>
+            <div class="price_box">
+              <strong>$32</strong>
+              <span>$45</span>
+            </div>
+          </div>
+        </div>
+        <div class="product_box">
+          <a href="">
+            <div
+              class="product_img_box"
+              style="
+                background: url(public/images/products/iRobot.png);
+                background-size: cover;
+              "
+            >
+              <div class="hover_box">
+                <button>Add To Cart</button>
+              </div>
+            </div>
+          </a>
+          <div class="product_content_box">
+            <span class="product_title">Sony</span>
+            <a href="">
+              <p class="product_desc">
+                iRobot Roomba i3+ EVO Wi-Fi Connected Self-Empty Robot.
+              </p>
+            </a>
+            <div class="review_box">
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <span>3,014 reviews</span>
+            </div>
+            <div class="price_box">
+              <strong>$399.00</strong>
+              <span>$45</span>
+            </div>
+          </div>
+        </div>
+        <div class="product_box">
+          <a href="">
+            <div
+              class="product_img_box"
+              style="
+                background: url(public/images/products/dyson.png);
+                background-size: cover;
+              "
+            >
+              <div class="hover_box">
+                <button>Add To Cart</button>
+              </div>
+            </div>
+          </a>
+          <div class="product_content_box">
+            <span class="product_title">Eastsport</span>
+            <a href="">
+              <p class="product_desc">
+                Dyson V7 Complete Cordless Stick Vacuum - Iron/Blue
+              </p>
+            </a>
+            <div class="review_box">
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <img src="public/images/Photos/icons/review.svg" alt="" />
+              <span>3,014 reviews</span>
+            </div>
+            <div class="price_box">
+              <strong>$32</strong>
+              <span>$45</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="next_prev_box" style="transform: scaleX(-1)">
+        <img src="public/images/Photos/icons/next.svg" alt="" />
+      </div>
+    </div>
+    <div class="pagination_box">
+      <div class="pagination_main">
+        <img
+          src="public/images/Photos/icons/arrow-prev_next.svg"
+          alt=""
+        />
+        <div class="pagination_dot">
+          <div class="dot">
+            <div></div>
+          </div>
+          <div class="dot active">
+            <div></div>
+          </div>
+
+          <div class="dot">
+            <div></div>
+          </div>
+          <div class="dot">
+            <div></div>
+          </div>
+          <div class="dot">
+            <div></div>
+          </div>
+        </div>
+        <img
+          src="public/images/Photos/icons/arrow-prev_next.svg"
+          alt=""
+          style="transform: scaleX(-1)"
+        />
+      </div>
+    </div>
+  </div>
+</div>
+<div class="adv_frame">
+  Members get free shipping* with no order minimum!*Restrictions apply.Try
+  free 30-day trial
+</div>
+</div>
+</body>
 </html>
