--- a/index.html
+++ b/index.html
@@ -632,21 +632,21 @@
       </div>
       <div class="small_product_box">
         <div class="small_product_content">
-          <strong>Over-Ear</strong>
+          <strong>On-Ear</strong>
           <span>29 items</span>
         </div>
         <img src="public/images/products/on-ear.png" alt="">
       </div>
       <div class="small_product_box">
         <div class="small_product_content">
-          <strong>On-Ear</strong>
+          <strong>Sport & Fitness</strong>
           <span>29 items</span>
         </div>
         <img src="public/images/products/fitness_headphone.png" alt="">
       </div>
       <div class="small_product_box">
         <div class="small_product_content">
-          <strong>Over-Ear</strong>
+          <strong>Bluetooth Headphone</strong>
           <span>29 items</span>
         </div>
         <img src="public/images/products/bluetooth_headphones.png" alt="">
