feat: completed event frame

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     />
     <link rel="stylesheet" href="./public/css/command.css" />
     <link rel="stylesheet" href="public/css/home (2).css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="navbar_frame">
@@ -848,7 +855,262 @@
     
 
     </div>
-  </div>
+    
+      </div>
+    </div>
+    <div class="event_frame">
+      <div class="container">
+        <div class="event_content_box">
+          <span class="event_content_title">Top Deals Of The Day</span>
+          <div class="timer_wrapper">
+            <div class="timer_box">
+              <strong>178</strong>
+              <span>Days</span>
+            </div>
+            <div class="timer_box">
+              <strong>23</strong>
+              <span>Hours</span>
+            </div>
+            <div class="timer_box">
+              <strong>14</strong>
+              <span>Minutes</span>
+            </div>
+            <div class="timer_box">
+              <strong>39</strong>
+              <span>Seconds</span>
+            </div>
+          </div>
+          <a href="#">Show More</a>
+        </div>
+        <div class="event_product_wrapper">
+          <div class="prev_next_box">
+            <img
+              src="./public/images/icons/next.svg"
+              alt=""
+              class="white_svg"
+            />
+          </div>
+          <div class="event_product_boxes">
+            <div class="event_product_box">
+              <a href="#" class="event_product_image">
+                <img
+                  src="./public/images/products/sony_notebook.png"
+                  alt=""
+                />
+              </a>
+              <div class="product_box_content" style="padding: 0 0 0 10px">
+                <span class="product_title">SONY</span>
+                <a href="#">
+                  <p class="product_description">
+                    SAMSUNG Chromebook 4+ 15.6" Intel® Celeron®
+                  </p>
+                </a>
+                <div class="review_box">
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <span>3,014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+            <div class="event_product_box">
+              <a href="#" class="event_product_image">
+                <img
+                  src="./public/images/products/sony_playstation.png"
+                  alt=""
+                />
+              </a>
+              <div class="product_box_content" style="padding: 0 0 0 10px">
+                <span class="product_title">SONY</span>
+                <a href="#">
+                  <p class="product_description">
+                    Sony PlayStation 5 Video Game Console
+                  </p>
+                </a>
+                <div class="review_box">
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <span>3,014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$399</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+            <div class="event_product_box">
+              <a href="#" class="event_product_image">
+                <img src="./public/images/products/apple_watch.png" alt="" />
+              </a>
+              <div class="product_box_content" style="padding: 0 0 0 10px">
+                <span class="product_title">Eastsport</span>
+                <a href="#">
+                  <p class="product_description">
+                    Apple Watch Series 3 GPS Space Gray - 38mm - Black
+                  </p>
+                </a>
+                <div class="review_box">
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <span>3,014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+            <div class="event_product_box">
+              <a href="#" class="event_product_image">
+                <img src="./public/images/products/canon_camera.png" alt="" />
+              </a>
+              <div class="product_box_content" style="padding: 0 0 0 10px">
+                <span class="product_title">Eastsport</span>
+                <a href="#">
+                  <p class="product_description">
+                    Canon EOS Rebel T100 Digital SLR Camera with.
+                  </p>
+                </a>
+                <div class="review_box">
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <img src="./public/images/icons/review.svg" alt="" />
+                  <span>3,014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="prev_next_box" style="transform: scaleX(-1)">
+            <img
+              src="./public/images/icons/next.svg"
+              alt=""
+              class="white_svg"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer_frame">
+      <div class="container">
+        <div class="footer_top">
+          <div class="footer_contact_box">
+            <span class="footer_spec_title">Contact Us</span>
+            <div class="footer_contact_main">
+              <img src="./public/images/icons/phone-call.svg" alt="" />
+              <div>
+                <strong>Monday-Friday: 08am-9pm</strong>
+                <span>+(1) 123 456 7890</span>
+              </div>
+            </div>
+            <div class="footer_contact_main">
+              <img src="./public/images/icons/email.svg" alt="" />
+              <div>
+                <strong>Need help with your order?</strong>
+                <span>support@zenmart.com</span>
+              </div>
+            </div>
+          </div>
+          <div class="footer_service_box">
+            <span class="footer_spec_title" style="margin-bottom: 15px"
+              >Customer Support</span
+            >
+            <a href="#">Contact Us</a>
+            <a href="#">Help Centre</a>
+            <a href="#">Returns & Exchanges</a>
+            <a href="#">Best Buy Financing</a>
+            <a href="#">Best Buy Gift Card</a>
+          </div>
+          <div class="footer_service_box">
+            <span class="footer_spec_title" style="margin-bottom: 15px"
+              >Services</span
+            >
+            <a href="#">Geek Squad</a>
+            <a href="#">In-Home Advisor</a>
+            <a href="#">Trade-In Program</a>
+            <a href="#">Electronics Recycling</a>
+            <a href="#">Best Buy Health</a>
+          </div>
+          <div class="footer_media_box">
+            <div class="footer_media_main">
+              <span class="footer_spec_title">Follow us</span>
+              <div class="media_box">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+              </div>
+            </div>
+            <div class="footer_mobile_main">
+              <span class="footer_spec_title" style="margin-bottom: 0"
+                >Mobile Apps</span
+              >
+              <div class="mobile_boxes">
+                <div class="mobile_box">
+                  <img src="./public/images/icons/apple_icon.png" alt="" />
+                  <span>IOS App</span>
+                </div>
+                <div class="mobile_box">
+                  <img src="./public/images/icons/android_icon.png" alt="" />
+                  <span>Android App</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="footer_media_box">
+            <div class="footer_media_main" style="margin-top: 130px">
+              <span class="footer_spec_title">We accept</span>
+              <div class="card_box">
+                <img src="./public/images/icons/visa.png" alt="" />
+                <img src="./public/images/icons/master_card.png" alt="" />
+                <img src="./public/images/icons/apple_pay.png" alt="" />
+                <img src="./public/images/icons/dicvover.png" alt="" />
+                <img src="./public/images/icons/paypal.png" alt="" />
+                <img src="./public/images/icons/amex.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer_bottom">
+          <div class="footer_main">
+            <div class="footer_bottom_left">
+              <span>© 2022 Zenmart. All Rights Reserved</span>
+              <span>Privacy · Terms · Sitemap</span>
+            </div>
+            <div class="footer_bottom_right">
+              <div class="footer_select_box">
+                <span>Currency</span>
+                <select name="" id="">
+                  <option value="" selected>USD</option>
+                  <option value="">UZS</option>
+                  <option value="">KRW</option>
+                </select>
+              </div>
+              <div class="footer_select_box">
+                <span>Language</span>
+                <select name="" id="">
+                  <option value="" selected>English</option>
+                  <option value="">Uzbek</option>
+                  <option value="">Korean</option>
+                </select>
+              </div>
  </div>
  </div>
  </div>
