--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="nav_top_menu">
-            <a href="">
+            <a href="./order/cart.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <img src="public/images/icons/heart.svg" alt="" />
@@ -53,10 +53,10 @@
                 </div>
               </div>
             </a>
-            <a href="">
+            <a href="./other/login.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
-                  <img src="public/images/icons/user.svg" alt="" />
+                  <img src="public/images/icons/profile.svg" alt="" />
                 </div>
                 <div class="box_info_box">
                   <span>Sign In</span>
@@ -64,7 +64,7 @@
                 </div>
               </div>
             </a>
-            <a href="">
+            <a href="./order/cart.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <div class="basket_count">2</div>
@@ -86,19 +86,19 @@
             </div>
             <div class="navbar_route_menu">
               <div class="router_menu">
-                <a href="" class="active">Home</a>
+                <a href="./index.html" class="active">Home</a>
               </div>
               <div class="router_menu">
-                <a href="">Shop</a>
+                <a href="./PRODUCT/all.html">Shop</a>
               </div>
               <div class="router_menu">
-                <a href="">Orders</a>
+                <a href="./order/cart.html">Orders</a>
               </div>
               <div class="router_menu">
-                <a href="">About</a>
+                <a href="./other/about.html">About</a>
               </div>
               <div class="router_menu">
-                <a href="">Contact</a>
+                <a href="./other/contact.html">Contact</a>
               </div>
             </div>
             <div class="sorting_menu">
@@ -119,7 +119,7 @@
               <div>Special Offer</div>
               <span>Immersive Extertianment</span>
               <p>Discover our new items. Up to 25% Off!</p>
-              <a href="">Shop Now</a>
+              <a href="./PRODUCT/all.html">Shop Now</a>
               <img src="public/images/icons/header_img.svg" alt="" />
             </div>
           </div>
@@ -128,7 +128,7 @@
               <div class="box_left">
                 <span>Starting from $899</span>
                 <p>Health Care Monitor</p>
-                <a href="">Shop Now</a>
+                <a href="./PRODUCT/ChosenProduct.html">Shop Now</a>
                 <div class="hover_border"></div>
               </div>
               <div class="box_rieght">
@@ -185,7 +185,7 @@
         <div class="container">
           <div class="category_top">
             <span>Shop category</span>
-            <a href="">View All Categories</a>
+            <a href="./PRODUCT/all.html">View All Categories</a>
           </div>
           <div class="category_wrapper">
             <div class="category_box">
@@ -424,7 +424,7 @@
   <div class="container">
     <div class="category_top">
       <span>top selling product</span>
-      <a href="">View All </a>
+      <a href="./PRODUCT/all.html">View All </a>
     </div>
     <div class="product_wrapper">
       <div class="next_prev_box">
@@ -432,7 +432,7 @@
       </div>
       <div class="product_boxes">
         <div class="product_box">
-          <a href="">
+          <a href="./PRODUCT/ChosenProduct.html">
             <div
               class="product_img_box"
               style="
@@ -617,14 +617,14 @@
   <div class="container">
     <div class="category_top">
       <span>headphones</span>
-      <a href="">View All </a>
+      <a href="./PRODUCT/all.html">View All </a>
   </div>
      <div class="spec_product_wrapper">
      <div class="big_product_box">
       <div class="big_product_content">
         <span>Now in moon gray</span>
         <p>Beats Studio Buds</p>
-        <a href="">Shop Now</a>
+        <a href="./PRODUCT/ChosenProduct.html">Shop Now</a>
         <div class="hover_border"></div>
       </div>
       <img src="public/images/products/headphone_big.png" alt="">
@@ -683,13 +683,13 @@
     <div class="tv_product_boxes">
       <div class="tv_product_box">
        <div class="product_img">
-        <a href="">
+        <a href="./PRODUCT/ChosenProduct.html">
           <img src="public/images/products/samsung_tv.png" alt=""/>
         </a>
       </div>
       <div class="product_content_box">
         <span class="product_title">SAMSUNG</span>
-        <a href="">
+        <a href="./PRODUCT/ChosenProduct.html">
           <p class="product_desc">
             Samsung 58" 4K UHD HDR LED Tizen Smart TV
           </p>
@@ -712,13 +712,13 @@
   
       <div class="tv_product_box">
       <div class="poduct_img">
-        <a href="">
+        <a href="PRODUCT/ChosenProduct.html">
           <img src="public/images/products/tcl.png" alt=""/>
         </a>
       </div>
       <div class="product_content_box">
         <span class="product_title">TLC</span>
-        <a href="">
+        <a href="./PRODUCT/ChosenProduct.html">
           <p class="product_desc">
             TCL 3-Series 40" 1080p HD LED Android Smart TV
           </p>
@@ -740,7 +740,7 @@
  
     <div class="tv_product_box">
       <div class="poduct_img">
-        <a href="">
+        <a href="./PRODUCT/ChosenProduct.html">
           <img src="public/images/products/LG-UHD.png" alt=""/>
         </a>
       </div>
@@ -797,13 +797,13 @@
   
     <div class="tv_product_box">
       <div class="poduct_img">
-        <a href="">
+        <a href="./PRODUCT/ChosenProduct.html">
           <img src="public/images/products/SONY-TV.png" alt=""/>
         </a>
       </div>
       <div class="product_content_box">
         <span class="product_title">SONY</span>
-        <a href="">
+        <a href="./PRODUCT/ChosenProduct.html">
           <p class="product_desc">
             Sony X85j 65" 4K UHD HDR LED Smart Google TV...
           </p>
@@ -880,7 +880,7 @@
               <span>Seconds</span>
             </div>
           </div>
-          <a href="#">Show More</a>
+          <a href="./PRODUCT/all.html">Show More</a>
         </div>
         <div class="event_product_wrapper">
           <div class="prev_next_box">
@@ -892,7 +892,7 @@
           </div>
           <div class="event_product_boxes">
             <div class="event_product_box">
-              <a href="#" class="event_product_image">
+              <a href="./PRODUCT/ChosenProduct.html" class="event_product_image">
                 <img
                   src="./public/images/products/sony_notebook.png"
                   alt=""
@@ -900,7 +900,7 @@
               </a>
               <div class="product_box_content" style="padding: 0 0 0 10px">
                 <span class="product_title">SONY</span>
-                <a href="#">
+                <a href="">
                   <p class="product_description">
                     SAMSUNG Chromebook 4+ 15.6" Intel® Celeron®
                   </p>
@@ -920,7 +920,7 @@
               </div>
             </div>
             <div class="event_product_box">
-              <a href="#" class="event_product_image">
+              <a href="./PRODUCT/ChosenProduct.html" class="event_product_image">
                 <img
                   src="./public/images/products/sony_playstation.png"
                   alt=""
