feat: completed footer section view

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
         </div>
       </div>
     </div>
+    <div class="tv_frame"></div>
     <div class="home_page">
+      <div class="tv_frame"></div>
       <div class="header_frame">
         <div class="container">
           <div class="header_left">
