fix: refactored all html view

--- a/PRODUCT/all.html
+++ b/PRODUCT/all.html
@@ -38,14 +38,14 @@
               <input type="search" placeholder="Search Products..." />
             </div>
             <div class="search_icon_box">
-              <img src="public/images/icons/search.svg" alt="" />
+              <img src="../public/images/icons/search.svg" alt="" />
             </div>
           </div>
           <div class="nav_top_menu">
             <a href="./order/cart.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
-                  <img src="public/images/icons/heart.svg" alt="" />
+                  <img src="../public/images/icons/heart.svg" alt="" />
                 </div>
                 <div class="box_info_box">
                   <span>Wishlist</span>
@@ -56,7 +56,7 @@
             <a href="./other/login.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
-                  <img src="public/images/icons/profile.svg" alt="" />
+                  <img src="../public/images/icons/my_account.svg" alt="" />
                 </div>
                 <div class="box_info_box">
                   <span>Sign In</span>
@@ -68,7 +68,7 @@
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <div class="basket_count">2</div>
-                  <img src="public/images/icons/shopping-cart.svg" alt="" />
+                  <img src="../public/images/icons/shopping-cart.svg" alt="" />
                 </div>
                 <div class="box_info_box">
                   <span>$200</span>
@@ -81,7 +81,7 @@
         <div class="navbar_bott">
           <div class="navbar_bott_menu_box">
             <div class="browse_box">
-              <img src="public/images/icons/browse.svg" alt="" />
+              <img src="../public/images/icons/browse.svg" alt="" />
               <span>Browse Categories</span>
             </div>
             <div class="navbar_route_menu">
