--- a/PRODUCT/all.html
+++ b/PRODUCT/all.html
@@ -89,16 +89,16 @@
                 <a href="../index.html">Home</a>
               </div>
               <div class="router_menu">
-                <a href="/PRODUCT/all.html" class="active">Shop</a>
+                <a href="../PRODUCT/all.html" class="active">Shop</a>
               </div>
               <div class="router_menu">
-                <a href="./order/cart.html">Orders</a>
+                <a href="../order/cart.html">Orders</a>
               </div>
               <div class="router_menu">
-                <a href="./other/about.html">About</a>
+                <a href="../other/about.html">About</a>
               </div>
               <div class="router_menu">
-                <a href="./other/contact.html">Contact</a>
+                <a href="../other/contact.html">Contact</a>
               </div>
             </div>
             <div class="sorting_menu">
