feat: completed Product all page view

--- a/PRODUCT/all.html
+++ b/PRODUCT/all.html
@@ -86,7 +86,7 @@
             </div>
             <div class="navbar_route_menu">
               <div class="router_menu">
-                <a href="../index.html">Home</a>
+                <a href="/index.html">Home</a>
               </div>
               <div class="router_menu">
                 <a href="../PRODUCT/all.html" class="active">Shop</a>
